# tube-bend-calculator-app

./: Cargo.toml  README.md  icon.icns  index.html  main.rs  package.json  tauri.conf.json
.github/workflows/: release.yml
